--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KeciLust/ahj__env.git"
+    "url": "git+https://github.com/KeciLust/DOM__AHJ-17.git"
   },
   "bugs": {
-    "url": "https://github.com/KeciLust/ahj__env/issues"
+    "url": "https://github.com/KeciLust/DOM__AHJ-17/issues"
   },
-  "homepage": "https://github.com/KeciLust/ahj__env#readme"
+  "homepage": "https://github.com/KeciLust/DOM__AHJ-17#readme"
 }
